deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spin-transactions
spec:
  type: ClusterIP
  selector: { app: spin-transactions }
  ports:
    - { name: http, port: 80, targetPort: http }
